llvm/src/snapshots/transmute_llvm__tests__if_then_else_value_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f2nb(i64 %"n#param#sym20#", i1 %"c#param#sym21#") gc "shadow-stack" {
entry:
  %"sub#" = add i64 %"n#param#sym20#", -1
  %"add#" = add i64 %"n#param#sym20#", 1
  %if_result = select i1 %"c#param#sym21#", i64 %"sub#", i64 %"add#"
  call void @gc_run()
  %"eq#" = icmp eq i64 %if_result, 42
  ret i1 %"eq#"
}

attributes #0 = { nounwind }
