llvm/src/snapshots/transmute_llvm__tests__if_then_value_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f1n(i64 %"n#param#sym20#") gc "shadow-stack" {
entry:
  %"ne#.not" = icmp eq i64 %"n#param#sym20#", 42
  br i1 %"ne#.not", label %common.ret, label %true_branch

common.ret:                                       ; preds = %entry, %true_branch
  %common.ret.op = phi i1 [ %"eq#", %true_branch ], [ true, %entry ]
  ret i1 %common.ret.op

true_branch:                                      ; preds = %entry
  call void @gc_run()
  %"eq#" = icmp eq i64 %"n#param#sym20#", 43
  br label %common.ret
}

attributes #0 = { nounwind }
