llvm/src/snapshots/transmute_llvm__tests__if_then_value_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

declare void @_TM0_5print1s(ptr)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i1 @_TM0_1f1n(i64 %"n#param#sym22#") gc "shadow-stack" {
entry:
  %"m#local#sym23#" = alloca i64, align 8
  %"ne#" = icmp ne i64 %"n#param#sym22#", 42
  br i1 %"ne#", label %true_branch, label %false_branch

true_branch:                                      ; preds = %entry
  %"sub#" = sub i64 %"n#param#sym22#", 1
  br label %end_if

false_branch:                                     ; preds = %entry
  ret i1 true

end_if:                                           ; preds = %true_branch
  store i64 %"sub#", ptr %"m#local#sym23#", align 4
  call void @gc_run()
  %"m#local#sym23#1" = load i64, ptr %"m#local#sym23#", align 4
  %"eq#" = icmp eq i64 %"m#local#sym23#1", 42
  ret i1 %"eq#"
}

attributes #0 = { nounwind }
