llvm/src/snapshots/transmute_llvm__tests__let_produces_alloca_at_entry_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1n(i64 %"n#param#sym18#") gc "shadow-stack" {
entry:
  %"eq#" = icmp eq i64 %"n#param#sym18#", 42
  br i1 %"eq#", label %true_branch, label %false_branch

common.ret:                                       ; preds = %false_branch, %true_branch
  %common.ret.op = phi i64 [ 1, %true_branch ], [ -1, %false_branch ]
  ret i64 %common.ret.op

true_branch:                                      ; preds = %entry
  call void @gc_run()
  br label %common.ret

false_branch:                                     ; preds = %entry
  call void @gc_run()
  br label %common.ret
}

attributes #0 = { nounwind }
